tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__PlantsThatMakeTh-AAAAAAAAAAAAAAAAAAAHEA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1808,
  "prerequisites": [
    721
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Sign me up! This plant will create fertilizer ingredients for you.\n\nThe best plants to cross to get Fertilia are zomplant, venomilia, trollplant, or spidernip. Watch out for venomilia though, not only is it poisonous, it also acts like a weed at growth 8+!\n\nUse the IC2 fertilizer and apatite this drops to make forestry fertilizer if using the multifarm.\n\n[note]BTW this is the rarest one, with a 0.76% chance even for zomplant, so expect it to take approximately 3 eternities.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Plants That Make Their Own Fertilizer?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    721
  ],
  "rewards": [],
  "tasks": []
}
