tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__PotatoesCarrotsP-AAAAAAAAAAAAAAAAAAAC0w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 723,
  "prerequisites": [
    721
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Your seeds have three different values: Growth, gain, and resistance (GGR).\n\nThe only way to change a crop's GGR without 3rd party tools (like NBTedit!) is through cross breeding. When two plants cross-breed, the resulting plant will have a GGR score that is between both \"parent\" plants' GGR. Sometimes it will also be a little bit higher or lower. Thus, to obtain high GGR scores you must go through numerous generations of crossbreeding.\n\nThe highest score for GGR is 31, while the lowest is 0.\n\n[note]BTW, if you want to skip all this BS, the nbtedit command is /nbtedit me, click root in the upper left, then scroll down to inventory, and find the seedbag (empty your inventory first to make it easier) and click on the icons until you find the page with the stats. Once you've found the GGR stats, select one and click edit in the upper left, make sure to save.[/note]\n\n[warn]Remember that you can permanently brick your character! So make a backup first if you don't know what you're doing, or want to edit your actual character.[/warn]\n\nOf course, you can't do any of this on a server.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Potatoes, Carrots, Pumpkins and Melons",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    721
  ],
  "rewards": [],
  "tasks": []
}
