tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__PumpkinPie-AAAAAAAAAAAAAAAAAAAJhw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2439,
  "prerequisites": [
    665
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Pumpkin Pie is a traditional US dessert that is particularly popular for Halloween, Thanksgiving, and Christmas.\n\n1,5 Food Bars for just two Pumpkins and a three sugar. Bon Appétit.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Pumpkin Pie",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    665
  ],
  "rewards": [],
  "tasks": []
}
