tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__PutthePetaltothe-AAAAAAAAAAAAAAAAAAAGRA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1604,
  "prerequisites": [
    1600
  ],
  "properties": {
    "auto_claim": false,
    "desc": "... with the Bio Diesel you produce from Canola!\n\nYou can try getting it from dandelions, cocoa, potatoes or lemons.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Put the Petal to the Metal",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1600
  ],
  "rewards": [],
  "tasks": []
}
