tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__ReallyOPFood-AAAAAAAAAAAAAAAAAAAFyw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1483,
  "prerequisites": [
    1584,
    1410
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You've heard about Dezil's Marshmallow, a really OP food which can be found from time to time in chests. What about I show you a way to cook this stuff yourself?\n\nAfter you've mastered the flowing spirit in the dream dimension (witchery), put a bit of flour, sugar, salis mundus and draconium dust in your IV Mixer.\nThe recipe starts when you give flowing spirit to it and gives you malformed slush, a very stinky and disgusting piece of...something.\n\nBe careful, you'll get blindness II when holding it in your hand.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Really OP Food",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1584,
    1410
  ],
  "rewards": [],
  "tasks": []
}
