tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__ReedandResin-AAAAAAAAAAAAAAAAAAAGQA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1600,
  "prerequisites": [
    721
  ],
  "properties": {
    "auto_claim": false,
    "desc": "One of the first useful crops you'll get is Stickreed. It's fast growing, and can produce sticky resin and sugarcane (harvest before it reaches full maturity). It's also great for crossing with other crops to raise their stats. One of the best strategies is to get these to around 20/31/10, then breed out from there. Most people will say 23/31/10, but 24+ act like weeds, so it's better to have some wiggle room.\n\nI'll trade you some fertilizer for 2 stacks of each.\n\n[note]PS, you don't really need rubber trees if you can get these.[/note]\n\n[note]You'll need a Basic Scanner to scan your Stickreed seeds once you get them, though any set of stats will work. See the quest in LV, and note it requires MV circuits.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Reed and Resin",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    721
  ],
  "rewards": [],
  "tasks": []
}
